@@ -1,4 +1,8 @@
-$Id: ChangeLog,v 1.186 2005-12-01 15:31:15 peterlin Exp $
+$Id: ChangeLog,v 1.187 2005-12-03 09:25:44 peterlin Exp $
+
+2005-12-03  Primoz Peterlin  <primoz.peterlin@biofiz.mf.uni-lj.si>
+
+	* Makefile: minor changes; now creating also a tarfile with sfds.
 
 2005-12-01  Primoz Peterlin  <primoz.peterlin@biofiz.mf.uni-lj.si>
 
